<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <LinearLayout
        android:id="@+id/header_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/register_TV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:text="@string/register_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@color/color_orange"/>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/full_name_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_marginTop="@dimen/_40dp"
        app:layout_constraintTop_toBottomOf="@id/header_LL"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_40dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/full_name_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name_edit_text"
        android:padding="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/full_name_TV"
        app:layout_constraintStart_toStartOf="@id/full_name_TV"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mobile_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_no"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/full_name_ET"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_40dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/mobile_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_no_edit_text"
        android:padding="@dimen/_20dp"
        android:inputType="number"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/mobile_TV"
        app:layout_constraintStart_toStartOf="@id/full_name_ET"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/mobile_ET"
        app:layout_constraintStart_toStartOf="@id/full_name_TV"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_edit_text"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/email_TV"
        app:layout_constraintStart_toStartOf="@id/mobile_ET"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pwd_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/email_ET"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_40dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/pwd_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_edit_text"
        android:inputType="textPassword"
        android:padding="@dimen/_20dp"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:drawableEnd="@drawable/baseline_key_24"
        app:layout_constraintTop_toBottomOf="@id/pwd_TV"
        app:layout_constraintStart_toStartOf="@id/pwd_TV"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textAllCaps="false"
        android:background="@drawable/login_btn_shape"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/pwd_ET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_have_account"
        android:textColor="@color/color_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>