<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <LinearLayout
        android:id="@+id/header_LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_TV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:text="@string/login"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"
            android:background="@color/color_orange"/>

    </LinearLayout>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_IV"
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_200dp"
        android:src="@drawable/easy_shop"
        app:layout_constraintTop_toBottomOf="@id/header_LL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/logo_IV"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_40dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_edit_text"
        android:padding="@dimen/_20dp"
        android:inputType="textEmailAddress"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/email_TV"
        app:layout_constraintStart_toStartOf="@id/email_TV"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/pwd_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/email_ET"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_40dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/pwd_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_edit_text"
        android:padding="@dimen/_20dp"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:drawableEnd="@drawable/baseline_visibility_off_24"
        app:layout_constraintTop_toBottomOf="@id/pwd_TV"
        app:layout_constraintStart_toStartOf="@id/pwd_TV"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_pwd_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintTop_toBottomOf="@id/pwd_ET"
        app:layout_constraintStart_toStartOf="@id/pwd_TV"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="false"
        android:background="@drawable/login_btn_shape"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_pwd_TV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/register_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/color_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>