<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProductFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/productNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_name"
        android:layout_margin="@dimen/_10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4"
            android:layout_marginEnd="@dimen/_5dp"
            style="@style/Widget.AppCompat.RatingBar.Small"
            app:layout_constraintTop_toTopOf="@id/productNameTV"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phoneDescriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_description"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/productNameTV"
            app:layout_constraintStart_toStartOf="@id/productNameTV"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/phoneIv"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phoneDescriptionTV" />

        <TextView
            android:id="@+id/dollar_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_sign"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/phoneIv"
            app:layout_constraintStart_toStartOf="@id/productNameTV"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/productCostTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_phones_cost"
            android:layout_marginStart="@dimen/_5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/phoneIv"
            app:layout_constraintStart_toEndOf="@id/dollar_sign"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            android:layout_marginEnd="@dimen/_5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toTopOf="@id/dollar_sign"
            app:layout_constraintEnd_toEndOf="parent"/>
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/dollar_sign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/black"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/specificationsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/specification"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="@dimen/_5dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="@id/productNameTV"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/userReviewTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_review"
            android:layout_marginTop="@dimen/_5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@id/specificationsTV"
            app:layout_constraintStart_toStartOf="@id/specificationsTV"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/reviewRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_review"
            android:layout_margin="@dimen/_10dp"
            tools:itemCount="@string/_1dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/userReviewTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>