<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/phone_IV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_phones"
            app:layout_constraintTop_toTopOf="@id/phone_IV"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="@dimen/_10dp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_20dp"
            app:layout_constraintStart_toEndOf="@id/phone_IV"
            />
        <androidx.appcompat.widget.AppCompatRatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4"
            android:layout_marginTop="@dimen/_5dp"
            style="@style/Widget.AppCompat.RatingBar.Small"
            app:layout_constraintTop_toTopOf="@id/phone_title"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_phones_description"
            app:layout_constraintTop_toBottomOf="@id/phone_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginStart="@dimen/_20dp"
            app:layout_constraintStart_toEndOf="@id/phone_IV"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dollar_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_sign"
            app:layout_constraintTop_toBottomOf="@id/phone_description"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginStart="@dimen/_20dp"
            app:layout_constraintStart_toEndOf="@id/phone_IV"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smart_phones_cost"
            app:layout_constraintTop_toBottomOf="@id/phone_description"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginStart="@dimen/_5dp"
            app:layout_constraintStart_toEndOf="@id/dollar_sign"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_cart"
            app:layout_constraintTop_toBottomOf="@id/phone_description"
            android:layout_margin="@dimen/_10dp"
            app:layout_constraintEnd_toEndOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>