<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FurnitureActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/skip_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textStyle="bold"
        android:textColor="@color/color_orange"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginTop="@dimen/_5dp"
        android:layout_marginEnd="@dimen/_10dp"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/furniture_IV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/furniture_img"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/display_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/furniture_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10dp"
        android:textSize="@dimen/text_40sp"
        app:layout_constraintTop_toBottomOf="@id/furniture_IV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description_TV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="normal"
        android:textColor="@color/description_color"
        android:text="@string/furniture"
        app:layout_constraintTop_toBottomOf="@id/display_TV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/next_BTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textAllCaps="false"
        android:background="@drawable/login_btn_shape"
        android:textColor="@color/black"
        android:layout_marginEnd="@dimen/_10dp"
        android:layout_marginBottom="@dimen/_10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>